force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
  <label>Review</label>
  <pluralLabel>Reviews</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Review Number</label>
    <displayFormat>REV-{00000}</displayFormat>
  </nameField>
  <sharingModel>Private</sharingModel>
</CustomObject>