force-app/main/default/objects/Review__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Reviews</relationshipName>
    <relationshipLabel>Reviews</relationshipLabel>
</CustomField>