force-app/main/default/objects/Review__c/validationRules/Comment_Required_For_Low_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Comment_Required_For_Low_Rating</fullName>
    <active>true</active>
    <description>Requires a comment when rating is 2 or below to capture feedback.</description>
    <errorConditionFormula>AND(
    Rating__c &lt;= 2,
    ISBLANK(Comment__c)
)</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Please provide a comment explaining your low rating so we can improve.</errorMessage>
</ValidationRule>