force-app/main/default/objects/Review__c/validationRules/Rating_Range_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Range_Check</fullName>
    <active>true</active>
    <description>Ensures review rating is between 1 and 5.</description>
    <errorConditionFormula>OR(
    Rating__c &lt; 1,
    Rating__c &gt; 5,
    ISBLANK(Rating__c)
)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 1 and 5 stars.</errorMessage>
</ValidationRule>